Re-wrote Acer x fremanii to reflect actual Acer rubrum Added P echinata Only two left

--- a/aRticles.bib
+++ b/aRticles.bib
@@ -8,25 +8,22 @@
 
 
 @misc{acer, 
-  title={Armstrong Freeman’s Maple - Acer x freemanii “Armstrong”}, 
-  url={https://www.cirrusimage.com/tree_maple_armstrong_freeman/}, 
-  abstractNote={Armstrong Freeman’s Maple Family Aceraceae Freeman maples are known for their fast growth, tolerance of poor. soil, and open form. Custom Search Acer x freemanii “Armstrong” Armstrong Freeman’s maple is fast-growing to 60-70 feet with a spread of perhaps 20-25 feet, with a tall, narrow habit. Grows best in full sun on well-drained soil, but […]}, 
-  journal={North American Insects & Spiders}, 
-  author={Red Planet}, 
-  year={2018}, 
-  month={Sep}, 
-  language={en-US} 
+  type={Database}, 
+  title={Acer rubrum (Carolina Maple, Curled Maple, Red Maple, Scarlet Maple, Soft Maple, Swamp Maple)}, 
+  url={https://plants.ces.ncsu.edu/plants/acer-rubrum/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
   }
-  
+
 @misc{acer2, 
-  url={https://en.wikipedia.org/w/index.php?title=Acer_%C3%97_freemanii&oldid=1049718728}, 
-  abstractNote={Acer × freemanii, Freeman maple or Freeman’s maple, is a naturally occurring hybrid maple that is the result of a cross between Acer rubrum (red maple) and Acer saccharinum (silver maple). Wild specimens are found in eastern North America where the parent species overlap. The species is named for Oliver M. Freeman of the U.S. National Arboretum who hybridized A. rubrum with A. saccharinum in 1933. The fall foliage is a striking orange-red. It has many commercially available cultivars and is frequently used as a street tree.}, 
-  note={Page Version ID: 1049718728}, 
-  journal={Wikipedia}, 
-  year={2021}, 
-  month={Oct}, 
-  language={en} 
+  title={Acer rubrum (Red maple)}, 
+  url={https://www.wildflower.org/plants/result.php?id_plant=acru}, 
+  journal={Native Plants of North America}, 
+  author={TWC and GDG}, 
+  year={2015}, 
+  month={Nov} 
   }
+
 
 @misc{castenea,
   type={Database},
@@ -35,6 +32,51 @@
   journal={North Carolina Extension Gardener Plant Toolbox}, 
   author={NCSU} 
   }
+
+@misc{chick, 
+  title={Chasing the Chicken of the Woods (Facts, Identification, and Recipes) - Mushroom Appreciation}, 
+  url={https://www.mushroom-appreciation.com/chicken-of-the-woods.html}, 
+  abstractNote={The chicken of the woods mushroom is vibrantly beautiful and fascinating to boot. Many people also consider it a delicacy! Learn more about here, including identification and cooking information.}, journal={Mushroom Appreciation}, 
+  author={Mrs. Mushroom, Jenny}, 
+  year={2022}, 
+  month={Feb}, 
+  language={en-US} 
+  }
+  
+@misc{chicky, 
+  title={Laetiporus sulphureus}, 
+  url={https://www.mushroomexpert.com/laetiporus_sulphureus.html}, 
+  abstractNote={Laetiporus sulphureus, often called the “chicken of the woods,” appears in eastern North America’s hardwood forests, where it causes a brown heart rot in the wood of standing and fallen oaks and other hardwoods. Since it is a heart rot fungus, the mushrooms appear above ground (often high on the tree)—or in a position that would have been above ground before the trunk fell. Distinctive physical features for Laetiporus sulphureus include its yellow-orange colors and the fact that it usually grows in overlapping, shelving clusters. Its flesh is soft (for a polypore), and its pore surface is yellow—although a white-pored version also exists (see below). In western North America there are several similar species (see the key to Laetiporus) and, in eastern North America the similar Laetiporus huroniensis appears on conifer wood. Laetiporus cincinnatus also appears in eastern hardwood forests, but is a root and butt rot fungus and therefore usually appears at the butt of the tree or on the ground near its base; additionally, Laetiporus cincinnatus grows in rosettes and has pinkish orange colors, a whitish pore surface, and smaller spores.A white-pored Laetiporus sulphureus, distinct from Laetiporus cincinnatus, is sometimes reported; Linder and Banik (2008) found some DNA support for the separation of a white-pored species or variety, but cautioned that further research is needed.Since the chicken of the woods is often a parasite, there is a good chance that it has killed its host tree. However, the mushrooms do not appear until well after the fungus—in the form of mushroom-less mycelium—has attacked the tree. By the time the chickens appear, they are definitely coming home to roost, as far as the tree’s health is concerned, and the fungus cannot be “removed” by removing the mushrooms.According to mating and DNA studies (Banik et al 2010, Song & Cui 2017) there are actually at least two candidates for the true Laetiporus sulphureus: one is limited to Europe and appears on the wood of hardwoods or conifers, while the other is distributed in Europe, North America, and South America and is limited to hardwoods. The two species, though well defined, are apparently morphologically inseparable, at least on current data. Since Laetiporus sulphureus was originally named from France (by Bulliard, who called it “the sulphur bolete,” in 1780) the species will have to be redefined in a contemporary sense on the basis of French collections and, if the Europe-only species is selected, our North American species will need a name.}, 
+  journal={MushroomExpert}, 
+  author={Kuo, Michael}, 
+  year={2017}, 
+  month={Nov} 
+  }
+
+@misc{chick3, 
+  title={Laetiporus sulphureus, Chicken-of-the-Woods, identification}, 
+  url={https://www.first-nature.com/fungi/laetiporus-sulphureus.php}, 
+  journal={First Nature}, 
+  author={O’Reilly, Pat and Parker, Sue} 
+  }
+
+@misc{fern, 
+  type={Database}, 
+  title={Matteuccia struthiopteris (Ostrich fern)}, 
+  url={https://www.wildflower.org/plants/result.php?id_plant=MAST}, 
+  journal={Native Plants of North America}, 
+  author={TWC}, 
+  year={2017}, 
+  month={Jul} 
+  }
+  
+@misc{fern2, 
+  title={Onoclea struthiopteris (Fiddlehead Fern, Ostrich-Feather Fern, Ostrich Fern, Shuttlecock Fern)}, 
+  url={https://plants.ces.ncsu.edu/plants/onoclea-struthiopteris/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+
 
 
 @book{galax, 
@@ -101,6 +143,29 @@
   month={Jul} 
   }
 
+@misc{pinec, 
+  type={Database}, 
+  title={Pinus echinata (Old-Field Pine, Rosemary Pine, Short-Leaf Pine, Shortleaf Pine, Yellow Pine)}, 
+  url={https://plants.ces.ncsu.edu/plants/pinus-echinata/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+  
+@misc{pinec2, 
+  url={https://www.gardenia.net/plant/pinus-echinata}, 
+  abstractNote={The hardiest and most adaptable of the southern pines, Pinus echinata (Shortleaf Pine) is a large evergreen conifer with short, spreading branches forming a pyramidal crown which broadens with age. Its evergreen foliage of relatively short bright green needles, 5 in. (12 cm), is borne in groups of two. The cylindrical brown cones, 1.5-2.5 in. long (3-6 cm), are produced on mature specimen (over 20 years old). Shortleaf Pine seeds are an important food source for birds and small mammals. The thin, flaky, black bark becomes reddish brown with evident resin pockets on older specimens. Shortleaf Pine is the most widely distributed of the southern yellow pines, being present in 21 states. It is a pioneer species. Many Shortleaf Pine stands became established after the Civil War when fields were abandoned. An important timber species, it is fire-resistant and very drought-tolerant. Perfect for native plant gardens or naturalized areas.}, 
+  journal={Gardenia.net} 
+  }
+
+@misc{peccone, 
+  title={Pinus echinata (shortleaf pine)}, 
+  url={http://www.rnr.lsu.edu/plantid/species/shortleafpine/shortleafpine.htm}, 
+  journal={Louisiana Plant ID}, 
+  author={Reid, Chris S.}, 
+  year={2020}, 
+  month={Jan} 
+  }
+
   
 @misc{rigida, 
   title={Pinus rigida}, 
@@ -109,6 +174,23 @@
   author={Gucker, Corey L.}, 
   year={2007} 
   }
+
+@misc{tulip,
+  title={Liriodendron tulipifera (Tulip Poplar, Tulip Tree, Yellow Poplar, Yellow-Poplar)}, 
+  url={https://plants.ces.ncsu.edu/plants/liriodendron-tulipifera/}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+  
+@misc{tulip2, 
+  title={Liriodendron tulipifera (Tulip tree)}, 
+  url={https://www.wildflower.org/plants/result.php?id_plant=LITU}, 
+  journal={Native Plants of North America}, 
+  author={TWC}, 
+  year={2021}, 
+  month={May} 
+  }
+
 
 
 
