--- a/dixon-woods-blurbs.tex
+++ b/dixon-woods-blurbs.tex
@@ -114,6 +114,46 @@
 \setcounter{tocdepth}{2}
 \tableofcontents
 }
+\hypertarget{acer-x-freemanii}{%
+\section{\texorpdfstring{\emph{Acer x freemanii}}{Acer x freemanii}}\label{acer-x-freemanii}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{acer1} \includegraphics[width=0.5\linewidth]{redmap} 
+
+}
+
+\caption{*Acer* leaves (left), close-up (right).}\label{fig:maple}
+\end{figure}
+
+\hypertarget{common-names-freeman-maple-and-autumn-blaze-maple}{%
+\subsection{Common names; Freeman maple and Autumn blaze maple}\label{common-names-freeman-maple-and-autumn-blaze-maple}}
+
+\emph{Acer x freemanii} is a naturally occuring hybrid between \emph{Acer rubrum} (Red Maple) and \emph{Acer saccharinum} (Silver Maple). This tree in named after the hybridizer Oliver M. Freeman of the U.s. National Arboretum. The fall foliage of this tree colors orange-red and is often used as a street tree in urban areas. This fall foliage can last for several weeks before shedding for the winter. In winter, the usually smooth, thin, gray bark furrows with age. This tree can grow up to 60 feet tall and 40 feet wide in the foliage. As a full sun and partial shade tolerant plant, it is easily grown in well-fdraining moist, organic-rich, and slightly acidic soils such as those in Dixon. (Planet 2018, 2021)
+
+Further reading; \href{https://plants.ces.ncsu.edu/plants/acer-x-freemanii/}{\emph{Acer x freemanii}}, \href{https://en.wikipedia.org/w/index.php?title=Acer_\%C3\%97_freemanii\&oldid=1049718728}{\emph{Acer x freemanii}}
+
+\hypertarget{castanea-dentata}{%
+\section{\texorpdfstring{\emph{Castanea dentata}}{Castanea dentata}}\label{castanea-dentata}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{castden} \includegraphics[width=0.5\linewidth]{castflower} 
+
+}
+
+\caption{*Castanea dentata* leaves (left), flowers on catkins (right).}\label{fig:cast}
+\end{figure}
+
+\hypertarget{common-names-american-chestnut-and-chestnut}{%
+\subsection{Common names; American Chestnut and Chestnut}\label{common-names-american-chestnut-and-chestnut}}
+
+\emph{Castenea dantata}, was once prolific across the Eastern U.S., has faced rapid decline of it's historic range following introduction of pathogenic fungus in New York City in 1904. The chestnut blight, introduced by imported Chinese chestnuts (\emph{Castanea mollissima}), prevents American chestnuts from reaching maturity. Nowadays, reprouting trees from stumps can grow up to 20 feet tall and produce some nuts before succumbing to the blight. Work by the American Chestnut Society is being done to produce blight resistant trees by hybridizing American chestnut with Chinese chestnut. (ACF 2016)
+
+Healthy American chestnuts can grow to be 50-75 feet tall and an equal width of foliage. The leaves can grow between 4 and 9 inches long at a width of 1.5 to 3 inches. They are dark green leaves with coarse-toothed margin and bristly tips. In fall the leaves turn a yellow-gold. Chestnuts flower from June to July, producing yellowish-white flowers on catkins (a cylindrical flower cluster). (NCSU n.d.a)
+
+Further reading; \href{https://acf.org}{American Chestnut Foundation}, \href{https://plants.ces.ncsu.edu/plants/castanea-dentata/}{\emph{Castanea dentata}}
+
 \hypertarget{galax-unceolata}{%
 \section{\texorpdfstring{\emph{Galax unceolata}}{Galax unceolata}}\label{galax-unceolata}}
 
@@ -152,24 +192,79 @@ Further reading: \href{https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf}{Gala
 
 Further reading: \href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml}{\emph{Gaylussacia baccata} --- black huckleberry}
 
-\hypertarget{monotropa-hypopitys}{%
-\section{\texorpdfstring{\emph{Monotropa hypopitys}}{Monotropa hypopitys}}\label{monotropa-hypopitys}}
+\hypertarget{iris-sanguinea}{%
+\section{\texorpdfstring{\emph{Iris sanguinea}}{Iris sanguinea}}\label{iris-sanguinea}}
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.5\linewidth]{M hypopitys} 
+{\centering \includegraphics[width=0.5\linewidth]{irissan} 
 
 }
 
-\caption{*Monotropa hypositys* flowers. Photo by Hugh and Carol Nourse.}\label{fig:hypopitys}
+\caption{*Iris sanguinea* in late bloom}\label{fig:iris}
 \end{figure}
 
-\hypertarget{common-names-dutchmans-pipe-false-beech-drops-pinesap-and-yellow-birds-nest}{%
-\subsection{Common names; Dutchman's Pipe, false beech-drops, pinesap, and yellow bird's-nest}\label{common-names-dutchmans-pipe-false-beech-drops-pinesap-and-yellow-birds-nest}}
+\hypertarget{common-names-japanese-iris-and-siberian-iris}{%
+\subsection{Common names; Japanese Iris and Siberian Iris}\label{common-names-japanese-iris-and-siberian-iris}}
 
-\emph{Monotropa hypopitys} is an herbaceous perennial plant that grows to height between 10 and 35 cm. In North America, \emph{M hypopitys} flowers from May to October in mature, moist, shaded forests often under pine trees (``hypo'' - under, ``pitys'' - pine). Each plant produces a single unbranched inflorescence that are analogous (similar in function but different evolution) to adventitious roots that appear pale yellowish-white to red-tinged. This is because the plant is parasitic in nature and obtains its nutrients from photosynthetic trees connected via fungal mycorrhizal networks. The leaves, or bracts, are scale-like and cover most of the inflorescence. The flowers of this plant emerge as pendants and become erect when the fruit matures. Plants that flower in the summer tend to be yellow and sparsely hairy, while those blooming in autumn tend to be red and densely hairy. It is proposed that the summer blooms are self-pollinating. (USFS n.d.a)
+\emph{Iris sanguinea} is native to eastern Asia, hence the common names, but have since been naturalized to temperate regions across the globe. Many plant of this genus are thought to be poisonous if ingested, especially the roots, as such they are resistant to deer and rabbits. Iris can grow in virtually any hardiness region of the U.S. but particularly enjoys deep meadows, near riparian areas, and on forest edges. The soils for this plant should be well draining, with slight acidity and plenty of organic matter. It prefers full sun but is tolerant of partial shade. It flowers between May and July, producing blue, white, or purple-lavendar showy blooms. The flower goes to seed in July through September following flower blooms. The seeds, themselves, are ellipsoidal capsules with with flat seeds. (NCSU n.d.b, PFAF n.d.)
 
-Further reading: \href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml}{\emph{Monotropa hypopitys} - Pinesap, Dutchman's Pipe}
+Further reading;\href{https://plants.ces.ncsu.edu/plants/iris-sanguinea/}{\emph{Iris sanguinea}},
+\href{https://pfaf.org/user/Plant.aspx?LatinName=Iris+sanguinea}{Iris sanguinea - Donn. ex Hornem.}
+
+\hypertarget{kalmia-latifolia}{%
+\section{\texorpdfstring{\emph{Kalmia latifolia}}{Kalmia latifolia}}\label{kalmia-latifolia}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{kalmia1} \includegraphics[width=0.5\linewidth]{kalmlat} \includegraphics[width=0.5\linewidth]{kallat} 
+
+}
+
+\caption{*Kalmia latifolia* bark (top left), fallen white flowers (top right), and tree with foliage in a sun fleck (bottom)}\label{fig:kalmia}
+\end{figure}
+
+\hypertarget{common-names-calico-bush-ivy-bush-laurel-mountain-ivy-mountain-laurel-sheepkill-and-spoonwood}{%
+\subsection{Common names; Calico bush, Ivy bush, Laurel, Mountain ivy, Mountain laurel, Sheepkill, and Spoonwood}\label{common-names-calico-bush-ivy-bush-laurel-mountain-ivy-mountain-laurel-sheepkill-and-spoonwood}}
+
+\emph{Kalmia latifolia} is a broadleaf evergreen shrub that branches often into a thicket and sometimes as a small tree with a crooked trunk. Laurel flowers in late April to July for several weeks in a range of colors from pink or purple/lavender to white. Each flower is cup-shaped with 4-5 petals and begin fruiting in Fall. Fruits are capsules that are brown or copper in color and available from September to October. Laurel is highly poisonous causing skeletal muscle and cardiac muscle function, as well as nerve function. Laurel is commonly mistaken for \emph{Rhododendron catawbiense} due to similar leaf structure, laurel has smaller leaves and rhododendron have larger leaves. Likewise, as laurel ages the bark begins to peel off in long strips. The two are otherwise similar in growth requirements, i.e.~full sun or partial shade, acidic soils with good drainage and high organic matter. (TWC 2017, Figart 2021, NCSU n.d.c)
+
+Further reading;\href{https://www.wildflower.org/plants/result.php?id_plant=KALA}{\emph{Kalmia latifolia}}, \href{https://www.smokiesinformation.org/news/wildflowers-101-mountain-laurel-and-rhododendron.html\#:~:text=The\%20laurel\%20has\%20the\%20smaller,leaves\%20droop\%20and\%20curl\%20back.}{WILDFLOWERS 101: MOUNTAIN LAUREL AND RHODODENDRON}, \href{https://plants.ces.ncsu.edu/plants/kalmia-latifolia/}{\emph{Kalmia latifolia}}
+
+\hypertarget{laetiporous-sulphureus}{%
+\section{\texorpdfstring{\emph{Laetiporous sulphureus}}{Laetiporous sulphureus}}\label{laetiporous-sulphureus}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{chicken} 
+
+}
+
+\caption{*Laetiporous sulphureus* ripe for harvesting.}\label{fig:chicken}
+\end{figure}
+
+\hypertarget{common-names-chicken-of-the-woods-chicken-fungus-chicken-mushroom-crab-of-the-woods-sulphur-polypore-and-sulphur-shelf}{%
+\subsection{Common names; Chicken-of-the-woods, Chicken fungus, Chicken mushroom, Crab-of-the-woods, Sulphur polypore, and sulphur shelf}\label{common-names-chicken-of-the-woods-chicken-fungus-chicken-mushroom-crab-of-the-woods-sulphur-polypore-and-sulphur-shelf}}
+
+\emph{Laetiporous sulphureus} is an edible polypore that is described as having the taste and texture of chicken meat. This fungus grows in shelf-like fashion on the bark of dead trees most commonly; beech, oak, and chestnut, occasionally on cherry and other hardwoods. When the fungus fruits it displays on the bark as vibrant orange or sulphur-yellow with a pale yellow or white underside. Individual shelves can grow 10 to 40 cm in width and vary in thickness from 3 to 12 cm. The flesh will retain its coloration when moist and ripe but will dry out to a paler coloration before decaying into a black mush. Likewise, the flesh will feel tender when young and become tough with age. Chicken-of-the-woods can sometimes be mistaken for the paler Giant Polypore (\emph{Meripilus giganteus}) which can be distinguished by bruising the pores - if they turn black, it's Giant Polypore. This lookalike is also edible but tastes like cardboard and can cause an upset stomach in some individuals. (Mrs. Mushroom 2022, O'Reilly and Parker n.d., \textbf{chick2?})
+
+Further reading; \href{https://www.first-nature.com/fungi/laetiporus-sulphureus.php}{Laetiporus sulphureus (Bull.) Murrill - Chicken-of-the-Woods}, \href{https://www.mushroom-appreciation.com/chicken-of-the-woods.html}{Chasing the Chicken of the Woods (Facts, Identification, and Recipes)},
+\href{https://www.mushroomexpert.com/laetiporus_sulphureus.html}{Laetiporus sulphureus}
+
+\hypertarget{liriodendron-tulipifera}{%
+\section{\texorpdfstring{\emph{Liriodendron tulipifera}}{Liriodendron tulipifera}}\label{liriodendron-tulipifera}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{tulip} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:tulippop}
+\end{figure}
+
+\hypertarget{common-names-blue-poplar-tulip-poplar-tulip-tree-yellow-poplar-yellow-wood}{%
+\subsection{Common names; Blue-poplar, Tulip-poplar, Tulip tree, Yellow-poplar, Yellow wood}\label{common-names-blue-poplar-tulip-poplar-tulip-tree-yellow-poplar-yellow-wood}}
 
 \hypertarget{monotropa-uniflora}{%
 \section{\texorpdfstring{\emph{Monotropa uniflora}}{Monotropa uniflora}}\label{monotropa-uniflora}}
@@ -186,9 +281,54 @@ Further reading: \href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/mono
 \hypertarget{common-names-indian-pipe-and-ghost-plant}{%
 \subsection{Common names; Indian Pipe and Ghost Plant}\label{common-names-indian-pipe-and-ghost-plant}}
 
-\emph{Monotropa uniflora} is an uncommon perennial wildflower that grows to height between 10 and 30 cm. \emph{M uniflora} blooms in early summer through early autumn in mature, moist, shaded forests. This plant is entirely translucent white while sometimes appearing in a pale pinkish-hue. This is because the plant is parasitic in nature and obtains its nutrients from photosynthetic trees (commonly Beech; \emph{Fagus sp.}) connected via fungal mycorrhizal networks. The leaves that arise directly from the peduncle (flower stalk) are scale-like and can be flecked black. As the name suggests (\emph{M uniflora}), this plant has single-flowers that emerge as pendants (pointed downward). Once the flower matures it erects perpendicular to the stalk. The fruits are capsules with seeds that release through slits along the length of the capsule. The flowers can persist following seed dispersal however the flesh may become desiccated and look brown or black. (USFS n.d.b)
+\emph{Monotropa uniflora} is an uncommon perennial wildflower that grows to height between 10 and 30 cm. \emph{M uniflora} blooms in early summer through early autumn in mature, moist, shaded forests. This plant is entirely translucent white while sometimes appearing in a pale pinkish-hue. This is because the plant is parasitic in nature and obtains its nutrients from photosynthetic trees (commonly Beech; \emph{Fagus sp.}) connected via fungal mycorrhizal networks. The leaves that arise directly from the peduncle (flower stalk) are scale-like and can be flecked black. As the name suggests (\emph{M uniflora}), this plant has single-flowers that emerge as pendants (pointed downward). Once the flower matures it erects perpendicular to the stalk. The fruits are capsules with seeds that release through slits along the length of the capsule. The flowers can persist following seed dispersal however the flesh may become desiccated and look brown or black. (USFS n.d.)
 
 Further reading: \href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}{\emph{Monotropa uniflora} - Ghost Plant, Indian Pipe}
+
+\hypertarget{onoclea-struthiopteris}{%
+\section{\texorpdfstring{\emph{Onoclea struthiopteris}}{Onoclea struthiopteris}}\label{onoclea-struthiopteris}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{fern} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:shutfern}
+\end{figure}
+
+\hypertarget{common-names-fiddlehead-fern-ostrich-feather-fern-ostrich-fern-shuttlecock-fern}{%
+\subsection{Common names; Fiddlehead fern, Ostrich-feather fern, Ostrich fern, Shuttlecock fern}\label{common-names-fiddlehead-fern-ostrich-feather-fern-ostrich-fern-shuttlecock-fern}}
+
+\hypertarget{patera-clarki}{%
+\section{\texorpdfstring{\emph{Patera clarki}}{Patera clarki}}\label{patera-clarki}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{snail} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:snaily}
+\end{figure}
+
+\hypertarget{common-names-dwarf-proud-globe}{%
+\subsection{Common names; Dwarf proud globe}\label{common-names-dwarf-proud-globe}}
+
+\hypertarget{pinus-echinata}{%
+\section{\texorpdfstring{\emph{Pinus echinata}}{Pinus echinata}}\label{pinus-echinata}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{shortpine} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:shpine}
+\end{figure}
+
+\hypertarget{common-names-arkansas-soft-pine-old-field-pine-shortleaf-pine-shortleaf-yellow-pine-shortstraw-pine-southern-yellow-pine-and-yellow-pine}{%
+\subsection{Common names; Arkansas soft pine, Old field pine, Shortleaf pine, Shortleaf yellow pine, Shortstraw pine, Southern yellow pine, and Yellow pine}\label{common-names-arkansas-soft-pine-old-field-pine-shortleaf-pine-shortleaf-yellow-pine-shortstraw-pine-southern-yellow-pine-and-yellow-pine}}
 
 \hypertarget{pinus-rigida}{%
 \section{\texorpdfstring{\emph{Pinus rigida}}{Pinus rigida}}\label{pinus-rigida}}
@@ -209,26 +349,94 @@ Further reading: \href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/mono
 
 Further reading: \href{https://www.fs.fed.us/database/feis/plants/tree/pinrig/all.html\#Cone\%20survival\%20and\%20seedling\%20establishment:}{\emph{Pinus rigida}}
 
+\hypertarget{quercus-robur}{%
+\section{\texorpdfstring{\emph{Quercus robur}}{Quercus robur}}\label{quercus-robur}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{english} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:engoak}
+\end{figure}
+
+\hypertarget{common-names-english-oak-oak-truffle-oak}{%
+\subsection{Common names; English Oak, Oak, Truffle Oak}\label{common-names-english-oak-oak-truffle-oak}}
+
+\hypertarget{quercus-rubra}{%
+\section{\texorpdfstring{\emph{Quercus rubra}}{Quercus rubra}}\label{quercus-rubra}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{redoak1} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:redoaks-1}
+\end{figure}
+\begin{figure}
+
+{\centering \includegraphics[width=0.5\linewidth]{redoak} 
+
+}
+
+\caption{*Galax unceolata* in bloom.}\label{fig:redoaks-2}
+\end{figure}
+
+\hypertarget{common-names-common-red-oak-gray-oak-eastern-red-oak-mountain-red-oak-and-northern-red-oak}{%
+\subsection{Common names; Common red oak, Gray oak, Eastern red oak, Mountain red oak, and Northern red oak}\label{common-names-common-red-oak-gray-oak-eastern-red-oak-mountain-red-oak-and-northern-red-oak}}
+
 \hypertarget{references}{%
 \section*{References}\label{references}}
 \addcontentsline{toc}{section}{References}
 
 \hypertarget{refs}{}
 \begin{CSLReferences}{1}{0}
+\leavevmode\vadjust pre{\hypertarget{ref-acer2}{}}%
+\href{https://en.wikipedia.org/w/index.php?title=Acer_\%C3\%97_freemanii\&oldid=1049718728}{2021, October. }.
+
 \leavevmode\vadjust pre{\hypertarget{ref-gaylussacia}{}}%
 \href{https://plants.ces.ncsu.edu/plants/gaylussacia-baccata/}{(n.d.). }.
+
+\leavevmode\vadjust pre{\hypertarget{ref-ACF}{}}%
+ACF. 2016, April. \href{https://acf.org/}{Saving the american chestnut tree \textbar{} the american chestnut foundation}.
+
+\leavevmode\vadjust pre{\hypertarget{ref-kal}{}}%
+Figart, F. 2021, June. \href{https://www.smokiesinformation.org/news/wildflowers-101-mountain-laurel-and-rhododendron.html}{Wildflowers 101: Mountain laurel and rhododendron}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-rigida}{}}%
 Gucker, C. L. 2007. \href{https://www.fs.fed.us/database/feis/plants/tree/pinrig/all.html\#Cone\%20survival\%20and\%20seedling\%20establishment:}{Pinus rigida}.
 
+\leavevmode\vadjust pre{\hypertarget{ref-chick}{}}%
+Mrs. Mushroom, J. 2022, February. \href{https://www.mushroom-appreciation.com/chicken-of-the-woods.html}{Chasing the chicken of the woods (facts, identification, and recipes) - mushroom appreciation}.
+
+\leavevmode\vadjust pre{\hypertarget{ref-castenea}{}}%
+NCSU. (n.d.a). \href{https://plants.ces.ncsu.edu/plants/castanea-dentata/}{Castanea dentata (american chestnut, chestnut)}. Database.
+
+\leavevmode\vadjust pre{\hypertarget{ref-iris}{}}%
+NCSU. (n.d.b). \href{https://plants.ces.ncsu.edu/plants/iris-sanguinea/}{Iris sanguinea (japanese iris, siberian iris)}. Database.
+
+\leavevmode\vadjust pre{\hypertarget{ref-kal2}{}}%
+NCSU. (n.d.c). \href{https://plants.ces.ncsu.edu/plants/kalmia-latifolia/}{Kalmia latifolia (calico bush, ivy bush, laurel, mountain ivy, mountain laurel, sheepkill, spoonwood)}. Database.
+
+\leavevmode\vadjust pre{\hypertarget{ref-chick3}{}}%
+O'Reilly, P., and S. Parker. (n.d.). \href{https://www.first-nature.com/fungi/laetiporus-sulphureus.php}{Laetiporus sulphureus, chicken-of-the-woods, identification}.
+
+\leavevmode\vadjust pre{\hypertarget{ref-iris2}{}}%
+PFAF. (n.d.). \href{https://pfaf.org/user/Plant.aspx?LatinName=Iris+sanguinea}{Iris sanguinea blood iris}. Database.
+
+\leavevmode\vadjust pre{\hypertarget{ref-acer}{}}%
+Planet, R. 2018, September. \href{https://www.cirrusimage.com/tree_maple_armstrong_freeman/}{Armstrong freeman's maple - acer x freemanii {``armstrong''}}.
+
 \leavevmode\vadjust pre{\hypertarget{ref-galax}{}}%
 Predny, M. L., and J. L. Chamberlain. 2005. \href{https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf}{Galax (galax urceolata): An annotated bibliography}. U.S. Department of Agriculture, Forest Service, Southern Research Station.
 
-\leavevmode\vadjust pre{\hypertarget{ref-hypopitys}{}}%
-\href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml}{USFS. (n.d.a). }.
+\leavevmode\vadjust pre{\hypertarget{ref-kal3}{}}%
+TWC. 2017, July. \href{https://www.wildflower.org/plants/result.php?id_plant=KALA}{Kalmia latifolia (mountain laurel)}.
 
 \leavevmode\vadjust pre{\hypertarget{ref-uniflora}{}}%
-\href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}{USFS. (n.d.b). }.
+\href{https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}{USFS. (n.d.). }.
 
 \end{CSLReferences}
 
