--- a/dixon woods blurbs.Rmd
+++ b/dixon woods blurbs.Rmd
@@ -27,6 +27,8 @@ knitr::opts_chunk$set(echo=FALSE,
 library(papaja)
 library(rsconnect)
 library(packrat)
+library(latex2exp)
+library(tinytex)
 
 papaja::r_refs(file="dixon.bib")
 
@@ -34,10 +36,12 @@ options(knitr.kable.NA="")
 
 ```
 
-# *Acer x freemanii*
+# *Acer rubrum*
+
+## Common names; Carolina maple, Curled maple, Red maple, Scarlet maple, Soft maple, Swamp maple, and Water maple 
 
 ```{r maple}
-#| fig.cap = "*Acer* leaves (left), close-up (right).",
+#| fig.cap = "*Acer rubrum* leaves (left), floral bloom (right) (Illustration courtesy of Patterson Clark)",
 #| out.width = "50%",
 #| fig.align = "center",
 #| fig.show="hold"
@@ -48,13 +52,14 @@ knitr::include_graphics("redmap.jpg")
 
 ```
 
-## Common names; Freeman maple and Autumn blaze maple
+*Acer rubrum* is a perennial deciduous tree in Sapindaceae family (soapberry) that can grow up to 120 feet tall, but more commonly reaches up to 70 feet tall and 2.5 feet in diameter. This native tree is tolerant of a wide range of soils but prefers slightly acidic, moist and well-draining soil in partial shade to full sun. This cold tolerant is fast-growing than Norway and Sugar maples but slower than Silver maple. The leaves of this maple are palmate (hand-shaped), lobed with serrate (toothed) margins, and a rounded cordate (heart-shaped) base. They are arranged opposite each other and will turn red or yellow in fall, also being some of the first trees to turn color. Red maples will flower once in the Spring and again in Winter, with the male trees displaying decorative red blooms. [@acer; @acer2]
 
-*Acer x freemanii* is a naturally occuring hybrid between *Acer rubrum* (Red Maple) and *Acer saccharinum* (Silver Maple). This tree in named after the hybridizer Oliver M. Freeman of the U.s. National Arboretum. The fall foliage of this tree colors orange-red and is often used as a street tree in urban areas. This fall foliage can last for several weeks before shedding for the winter. In winter, the usually smooth, thin, gray bark furrows with age. This tree can grow up to 60 feet tall and 40 feet wide in the foliage. As a full sun and partial shade tolerant plant, it is easily grown in well-fdraining moist, organic-rich, and slightly acidic soils such as those in Dixon. [@acer; @acer2]
+Further reading; [*Acer rubrum*](https://plants.ces.ncsu.edu/plants/acer-rubrum/), [*Acer rubrum*](https://www.wildflower.org/plants/result.php?id_plant=acru)
 
-Further reading; [*Acer x freemanii*](https://plants.ces.ncsu.edu/plants/acer-x-freemanii/), [*Acer x freemanii*](https://en.wikipedia.org/w/index.php?title=Acer_%C3%97_freemanii&oldid=1049718728)
 
 # *Castanea dentata*
+
+## Common names; American Chestnut and Chestnut
 
 ```{r cast}
 #| fig.cap = "*Castanea dentata* leaves (left), flowers on catkins (right).",
@@ -68,15 +73,16 @@ knitr::include_graphics("castflower.jpg")
 
 ```
 
-## Common names; American Chestnut and Chestnut
-
 *Castenea dantata*, was once prolific across the Eastern U.S., has faced rapid decline of it's historic range following introduction of pathogenic fungus in New York City in 1904. The chestnut blight, introduced by imported Chinese chestnuts (*Castanea mollissima*), prevents American chestnuts from reaching maturity. Nowadays, reprouting trees from stumps can grow up to 20 feet tall and produce some nuts before succumbing to the blight. Work by the American Chestnut Society is being done to produce blight resistant trees by hybridizing American chestnut with Chinese chestnut. [@ACF]
 
 Healthy American chestnuts can grow to be 50-75 feet tall and an equal width of foliage. The leaves can grow between 4 and 9 inches long at a width of 1.5 to 3 inches. They are dark green leaves with coarse-toothed margin and bristly tips. In fall the leaves turn a yellow-gold. Chestnuts flower from June to July, producing yellowish-white flowers on catkins (a cylindrical flower cluster). [@castenea]
 
 Further reading; [American Chestnut Foundation](https://acf.org), [*Castanea dentata*](https://plants.ces.ncsu.edu/plants/castanea-dentata/)
 
+
 # *Galax unceolata*
+
+## Common names; Wandflower, Wandplant, and Beetleweed.
 
 ```{r galax1}
 #| fig.cap = "*Galax unceolata* in bloom.",
@@ -86,15 +92,14 @@ Further reading; [American Chestnut Foundation](https://acf.org), [*Castanea den
 knitr::include_graphics("galax1.png")
 ```
 
-## Common names; Wandflower, Wandplant, and Beetleweed.
-
 *Galax unceolata* is an herbaceous perennial plant native to North America, growing mainly in the Appalachian Mountains up to 1500 meters (4921 feet) in elevation. This species is the sole representative of the plant family Diapensiaceae. This plant grows mainly in the understory of shaded forests and is composed of a rosette of leathery cardioid (heart) shaped. The leaves are serrated along the margin and will turn brown during the winter. Galax flowers in late sprignt to early summer along a single spike-like stem. Each flower is composed of five petals and are white in color. The fruit are capsules containing multiple seeds. The leaves persist throughout the year and are commonly harvested and used as an herbal remedy for cuts and kidney ailments. Although Galax is secure in the Southern Appalachian region, there are concerns about overharvesting particularly in the northern extent of its range.[@galax]
 
 Further reading: [Galax (*Galax unceolata*): An Annotated Bibliography](https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf)
 
 
-
 # *Gaylussacia spp.*
+
+## Common names; huckleberry and dangleberry
 
 ```{r gayluss}
 #| fig.cap = "Foliage of Gaylussacia in a sun fleck.",
@@ -105,15 +110,14 @@ Further reading: [Galax (*Galax unceolata*): An Annotated Bibliography](https://
 knitr::include_graphics("galuss.jpg")
 ```
 
-## Common names; huckleberry and dangleberry
-
 *Gaylussacia* is a genus of flowering plants that contains about 50 different species in the Ericaceae family. These deciduous or evergreen shrubs (depending on species) are a common component of oak-heath forests and are native the the Americas. These plant species are used as food by Lepidoptera (butterflies and moths) larvae, including *Coleophora gaylussaciella* which feeds exclusively on these plants. The fruits are edible to humans and are dark purple-black colored berries similar to blueberries (*Vacciunium spp.*). [@gaylussacia]
 
 Further reading: [*Gaylussacia baccata* — black huckleberry](https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml)
 
 
-
 # *Iris sanguinea*
+
+## Common names; Japanese Iris and Siberian Iris
 
 ```{r iris}
 #| fig.cap = "*Iris sanguinea* in late bloom",
@@ -125,17 +129,18 @@ knitr::include_graphics("irissan.jpg")
 
 ```
 
-## Common names; Japanese Iris and Siberian Iris
-
 *Iris sanguinea* is native to eastern Asia, hence the common names, but have since been naturalized to temperate regions across the globe. Many plant of this genus are thought to be poisonous if ingested, especially the roots, as such they are resistant to deer and rabbits. Iris can grow in virtually any hardiness region of the U.S. but particularly enjoys deep meadows, near riparian areas, and on forest edges. The soils for this plant should be well draining, with slight acidity and plenty of organic matter. It prefers full sun but is tolerant of partial shade. It flowers between May and July, producing blue, white, or purple-lavendar showy blooms. The flower goes to seed in July through September following flower blooms. The seeds, themselves, are ellipsoidal capsules with with flat seeds. [@iris; @iris2]
 
 Further reading;[*Iris sanguinea*](https://plants.ces.ncsu.edu/plants/iris-sanguinea/),
 [Iris sanguinea - Donn. ex Hornem.](https://pfaf.org/user/Plant.aspx?LatinName=Iris+sanguinea)
 
+
 # *Kalmia latifolia*
 
+## Common names; Calico bush, Ivy bush, Laurel, Mountain ivy, Mountain laurel, Sheepkill, and Spoonwood
+
 ```{r kalmia}
-#| fig.cap = "*Kalmia latifolia* bark (top left), fallen white flowers (top right), and tree with foliage in a sun fleck (bottom)",
+#| fig.cap = "*Kalmia latifolia* bark (top left), pink flowers in bloom (top right), and tree with foliage in a sun fleck (bottom)",
 #| out.width = "50%",
 #| fig.align = "center",
 #| fig.show="hold"
@@ -148,16 +153,17 @@ knitr::include_graphics("kallat.jpg")
 
 ```
 
-## Common names; Calico bush, Ivy bush, Laurel, Mountain ivy, Mountain laurel, Sheepkill, and Spoonwood
-
 *Kalmia latifolia* is a broadleaf evergreen shrub that branches often into a thicket and sometimes as a small tree with a crooked trunk. Laurel flowers in late April to July for several weeks in a range of colors from pink or purple/lavender to white. Each flower is cup-shaped with 4-5 petals and begin fruiting in Fall. Fruits are capsules that are brown or copper in color and available from September to October. Laurel is highly poisonous causing skeletal muscle and cardiac muscle function, as well as nerve function. Laurel is commonly mistaken for *Rhododendron catawbiense* due to similar leaf structure, laurel has smaller leaves and rhododendron have larger leaves. Likewise, as laurel ages the bark begins to peel off in long strips. The two are otherwise similar in growth requirements, i.e. full sun or partial shade, acidic soils with good drainage and high organic matter. [@kal; @kal2; @kal3]
 
 Further reading;[*Kalmia latifolia*](https://www.wildflower.org/plants/result.php?id_plant=KALA), [WILDFLOWERS 101: MOUNTAIN LAUREL AND RHODODENDRON](https://www.smokiesinformation.org/news/wildflowers-101-mountain-laurel-and-rhododendron.html#:~:text=The%20laurel%20has%20the%20smaller,leaves%20droop%20and%20curl%20back.), [*Kalmia latifolia*](https://plants.ces.ncsu.edu/plants/kalmia-latifolia/)
 
+
 # *Laetiporous sulphureus*
 
+## Common names; Chicken-of-the-woods, Chicken fungus, Chicken mushroom, Crab-of-the-woods, Sulphur polypore, and sulphur shelf
+
 ```{r chicken}
-#| fig.cap = "*Galax unceolata* in bloom.",
+#| fig.cap = "*Laetiporous sulphureus* ripe for harvesting.",
 #| out.width = "50%",
 #| fig.align = "center"
 
@@ -165,22 +171,35 @@ knitr::include_graphics("chicken.jpg")
 
 ```
 
-## Common names; Chicken-of-the-woods, Crab-of-the-woods, Sulphur polypore, and sulphur shelf
+*Laetiporous sulphureus* is an edible polypore that is described as having the taste and texture of chicken meat. This fungus grows in shelf-like fashion on the bark of dead trees most commonly; beech, oak, and chestnut, occasionally on cherry and other hardwoods. When the fungus fruits it displays on the bark as vibrant orange or sulphur-yellow with a pale yellow or white underside. Individual shelves can grow 10 to 40 cm in width and vary in thickness from 3 to 12 cm. The flesh will retain its coloration when moist and ripe but will dry out to a paler coloration before decaying into a black mush. Likewise, the flesh will feel tender when young and become tough with age. Chicken-of-the-woods can sometimes be mistaken for the paler Giant Polypore (*Meripilus giganteus*) which can be distinguished by bruising the pores - if they turn black, it's Giant Polypore. This lookalike is also edible but tastes like cardboard and can cause an upset stomach in some individuals. [@chick; @chicky; @chick3]
+
+Further reading; [Laetiporus sulphureus (Bull.) Murrill - Chicken-of-the-Woods](https://www.first-nature.com/fungi/laetiporus-sulphureus.php), [Chasing the Chicken of the Woods (Facts, Identification, and Recipes)](https://www.mushroom-appreciation.com/chicken-of-the-woods.html), 
+[Laetiporus sulphureus](https://www.mushroomexpert.com/laetiporus_sulphureus.html)
 
 # *Liriodendron tulipifera*
 
+## Common names; Blue-poplar, Tulip-poplar, Tulip tree, Yellow-poplar, Yellow wood
+
 ```{r tulippop}
-#| fig.cap = "*Galax unceolata* in bloom.",
+#| fig.cap = "*Liriodendron tulipifera* leaves in a sun fleck (left), floral bloom (right).",
 #| out.width = "50%",
-#| fig.align = "center"
+#| fig.align = "center",
+#| fig.show="hold"
 
 knitr::include_graphics("tulip.jpg")
 
+knitr::include_graphics("tulipflower.jpg")
+
 ```
 
-## Common names; Blue-poplar, Tulip-poplar, Tulip tree, Yellow-poplar, Yellow wood
+*Liriodendron tulipifera* is a deciduous pioneer tree species, meaning it is one of the first species to fill a disturbance gap in a forest stand. These trees are fast-growing without the constraint of weak wood, making it a valuable timber species. As such the wood from this tree is often used for furniture, as veneer, in boats, as paper pulp, and general lumber. In medicinal terms the inner bark was used by the First Nations as a worming medicine, an anti-arthritic, a cough syrup, and as a remedy for cholera. For wildlife this tree is a favorite of nesting birds, the flowers attract hummingbirds, and is a larval host for the Eastern Tiger Swallowtail butterfly (*Papilio glaucus*). Flowers will bloom between April and June, producing fragrant and edible cup-shaped flowers each with 6 petals. The flowers can present as gold/yellow, green, or orange in coloration. On larger trees they can be hard to spot as they bloom after the leaves are fully developed, only noticeable once they begin to fall. [@tulip; @tulip2]
+
+Further reading; [Liriodendron tulipifera](https://plants.ces.ncsu.edu/plants/liriodendron-tulipifera/), [Liriodendron tulipifera](https://www.wildflower.org/plants/result.php?id_plant=LITU)
+
 
 # *Monotropa uniflora*
+
+## Common names; Indian Pipe and Ghost Plant
 
 ```{r uniflora}
 #| fig.cap = "*Monotropa uniflora* flowers.",
@@ -190,18 +209,17 @@ knitr::include_graphics("tulip.jpg")
 knitr::include_graphics("M uniflora.jpg")
 ```
 
-## Common names; Indian Pipe and Ghost Plant
-
 *Monotropa uniflora* is an uncommon perennial wildflower that grows to height between 10 and 30 cm. *M uniflora* blooms in early summer through early autumn in mature, moist, shaded forests. This plant is entirely translucent white while sometimes appearing in a pale pinkish-hue. This is because the plant is parasitic in nature and obtains its nutrients from photosynthetic trees (commonly Beech; *Fagus sp.*) connected via fungal mycorrhizal networks. The leaves that arise directly from the peduncle (flower stalk) are scale-like and can be flecked black. As the name suggests (*M uniflora*), this plant has single-flowers that emerge as pendants (pointed downward). Once the flower matures it erects perpendicular to the stalk. The fruits are capsules with seeds that release through slits along the length of the capsule. The flowers can persist following seed dispersal however the flesh may become desiccated and look brown or black. [@uniflora]
  
 Further reading: [*Monotropa uniflora* - Ghost Plant, Indian Pipe](https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml)
 
 
-
 # *Onoclea struthiopteris*
 
+## Common names; Fiddlehead fern, Ostrich-feather fern, Ostrich fern, Shuttlecock fern
+
 ```{r shutfern}
-#| fig.cap = "*Galax unceolata* in bloom.",
+#| fig.cap = "*Onoclea struthiopteris* fronds.",
 #| out.width = "50%",
 #| fig.align = "center"
 
@@ -209,12 +227,17 @@ knitr::include_graphics("fern.jpg")
 
 ```
 
-## Common names; Fiddlehead fern, Ostrich-feather fern, Ostrich fern, Shuttlecock fern
+*Onoclea struthiopteris* is a perennial and deciduous fern often found in moist areas, in thickets, and in the understory of trees. Ostrich fern prefers partial to full shade, but will tolerate full sun with moist soils and cool temperatures. This plant is resistant to browsing by deer but the merging fiddleheads are otherwise edible. It has the potential to prevent erosion due to its rhizomatous colonization of the topsoil. Caution should be taken if planting in small spaces as it can spread aggressively.[@fern; @fern2]
 
-# *Patera clarki*
+Futher reading; [*Matteuccia struthiopteris*](https://www.wildflower.org/plants/result.php?id_plant=MAST) (although a different latin name, this is synonymous with *O. struthiopteris*);
+[*Onoclea struthiopteris*](https://plants.ces.ncsu.edu/plants/onoclea-struthiopteris/)
+
+# *Patera clarki nantahala*
+
+## Common names; Noonday globe 
 
 ```{r snaily}
-#| fig.cap = "*Galax unceolata* in bloom.",
+#| fig.cap = "*Patera clarki nantahala* ascending a trail post.",
 #| out.width = "50%",
 #| fig.align = "center"
 
@@ -222,22 +245,33 @@ knitr::include_graphics("snail.jpg")
 
 ```
 
-## Common names; Dwarf proud globe 
+*Patera clarki* is a land snail from the Polygyridae family that is native to the southeastern U.S., specifically; Georgia, North and South Carolina, and Tennessee. There is little information regarding the diet, life cycle, or interspecific interactions due to its rarity and limited distribution.  In July of 1978, US Fish and Wildlife placed the noonday globe snail on the Federal Endangered and Threatened Species List, with a fine of as much as $50,000 and one year in jail for taking one of these snails. 
 
 # *Pinus echinata*
 
+## Common names; Arkansas soft pine, Old field pine, Shortleaf pine, Shortleaf yellow pine, Shortstraw pine, Southern yellow pine, and Yellow pine
+
 ```{r shpine}
-#| fig.cap = "*Galax unceolata* in bloom.",
-#| out.width = "50%",
-#| fig.align = "center"
+#| fig.cap = "Close-up of Short pine needles (top left), female seed cone (top right), male pollen cone (bottom). Cone photos courtesy of LSU School of Renewable Natural Resources [@peccone].",
+#| out.width="50%",
+#| fig.align="center",
+#| fig.show="hold"
 
 knitr::include_graphics("shortpine.jpg")
 
+knitr::include_graphics("pinecfe.jpg")
+
+knitr::include_graphics("pinecma.jpg")
+
 ```
 
-## Common names; Arkansas soft pine, Old field pine, Shortleaf pine, Shortleaf yellow pine, Shortstraw pine, Southern yellow pine, and Yellow pine
+*Pinus echinata* is an evergreen conifer that is native to the southeastern U.S. and is considered one of the hardiest and most adaptable of the southern pines. The limbs will branch out forming a pyramidal crown (wide base to a fine pointed apex) that broadens with age. This tree can grow up to 100 feet tall with fascicles 2 or 3 needles between 3 and 5 inches in length. Male trees will produce pale purple cones, while female trees will produce pale pink cones. This pine will grow best in full sun, in well-draining, average wetness, and sandy loam soils. It is also an important timber tree in its more southern range, providing wood for general lumbar, plywood, paper pulp, and the oleoresins can be extracted to produce turpentine. [@pinec; @pinec2]
+
+Further reading; [*Pinus echinata* (Shortleaf Pine)](https://www.gardenia.net/plant/pinus-echinata), [*Pinus echinata*](https://plants.ces.ncsu.edu/plants/pinus-echinata/)
 
 # *Pinus rigida*
+
+## Common names; Pitch pine
 
 ```{r rigida, echo=FALSE}
 #| fig.cap = "*Pinus rigida* bark (Left). Cone life stages (Right), photo courtesy of C. N. Elliot.",
@@ -253,16 +287,14 @@ knitr::include_graphics("pitch pine cones.png")
 
 ```
 
-## Common names; Pitch pine
-
 *Pinus rigida* is mainly found in the southern areas of the northeastern United States. These trees are found in environments other species may find unfavorable (i.e. acidic, sandy, and low nutrient soils). The needles of this tree come in fascicles of three, grow to a length of 6-13 cm (2.25-5 inches), and are often slightly twisted. The cones of this tree are serotinous, meaning, they need to be exposed to an internal temperature of 100°C/212°F and can survive external temperatures as high as 421°C/790°F. The trunks of pitch pine are usually straight and covered in large, thick, irregular plates of bark. The thick bark provides an adaptation against fire by insulating the sensitive cambium layer from heat. It also has a remarkable regenerative ability, should it be damaged by cuts or fire, it can resprout using epicormic shoots (grow from the bark). Pitch pine is a pioneer species in abandoned agricultural or pasture land and is replaced by hardwoods, spruce, or other pines in the absence of disturbance. [@rigida]
-
 
 Further reading: [*Pinus rigida*](https://www.fs.fed.us/database/feis/plants/tree/pinrig/all.html#Cone%20survival%20and%20seedling%20establishment:)
 
 
-
 # *Quercus robur*
+
+## Common names; English Oak, Oak, Truffle Oak
 
 ```{r engoak}
 #| fig.cap = "*Galax unceolata* in bloom.",
@@ -273,22 +305,21 @@ knitr::include_graphics("english.jpg")
 
 ```
 
-## Common names; English Oak, Oak, Truffle Oak
 
 # *Quercus rubra*
 
+## Common names; Common red oak, Gray oak, Eastern red oak, Mountain red oak, Northern red oak, and Red oak
+
 ```{r redoaks}
-#| fig.cap = "*Galax unceolata* in bloom.",
+#| fig.cap = "** sapling leaves",
 #| out.width = "50%",
-#| fig.align = "center"
+#| fig.align = "center",
+#| fig.show="hold"
 
 knitr::include_graphics("redoak1.jpg")
 
-knitr::include_graphics("redoak.jpg")
-
 ```
 
-## Common names; Common red oak, Gray oak, Eastern red oak, Mountain red oak, and Northern red oak
 
 
 # References
