--- a/dixon.bib
+++ b/dixon.bib
@@ -57,3 +57,20 @@ Applications},
   note = {R package version 0.8.26},
   url = {https://CRAN.R-project.org/package=rsconnect},
 }
+@Manual{R-latex2exp,
+  title = {latex2exp: Use LaTeX Expressions in Plots},
+  author = {Stefano Meschiari},
+  year = {2022},
+  note = {R package version 0.9.4},
+  url = {https://CRAN.R-project.org/package=latex2exp},
+}
+@Article{R-tinytex,
+  title = {TinyTeX: A lightweight, cross-platform, and easy-to-maintain LaTeX distribution based on TeX Live},
+  author = {Yihui Xie},
+  journal = {TUGboat},
+  year = {2019},
+  volumne = {40},
+  number = {1},
+  pages = {30--32},
+  url = {https://tug.org/TUGboat/Contents/contents40-1.html},
+}
