FINISHED and spellchecked

--- a/aRticles.bib
+++ b/aRticles.bib
@@ -6,7 +6,6 @@
   month={Apr} 
   }
 
-
 @misc{acer, 
   type={Database}, 
   title={Acer rubrum (Carolina Maple, Curled Maple, Red Maple, Scarlet Maple, Soft Maple, Swamp Maple)}, 
@@ -23,7 +22,6 @@
   year={2015}, 
   month={Nov} 
   }
-
 
 @misc{castenea,
   type={Database},
@@ -60,6 +58,24 @@
   author={O’Reilly, Pat and Parker, Sue} 
   }
 
+@misc{engoak, 
+  type={Database}, 
+  title={Quercus robur (English Oak, Oaks, Truffle Oak)}, 
+  url={https://plants.ces.ncsu.edu/plants/quercus-robur/}, 
+  abstractNote={English Oak is an Asian and European native tree with a short wide sturdy trunk and a broad rounded spreading crown. It was brought to this country in the 1600s from Europe and has been an important lumber tree for furniture and shipbuilding. It’s an excellent specimen tree for very large yards, parks and public areas. It prefers average well-drained soils in full sun but adapts to a wide range of soil types and conditions. It can take 20-30 years to bear acorns. In the wild, it is found in northern USA and Canada. Can be problematic in humid climates. Plant if full sun with good airflow to help reduce the problem.
+English oak is considered to be a low-maintenance tree with few problems but powdery mildew can be significant in humid areas. Other cultivars may be more resistant to powdery mildew.}, 
+  journal={North Carolina Extension Gardener Plant Toolbox}, 
+  author={NCSU} 
+  }
+  
+@misc{eng2, 
+  title={Quercus robur (English Oak)}, 
+  url={https://www.gardenia.net/plant/quercus-robur}, 
+  abstractNote={Long-lived and majestic, Quercus robur (English oak) is a large deciduous tree adorned with a magnificent, broad-spreading crown. The foliage of 3-7 lobed, rich blue-green leaves turns reddish-brown in the fall. Inconspicuous yellow-green catkins appear in spring as the leaves emerge. The short trunk and upright branches, with their ridged and furrowed dark gray bark, provide architectural elegance and winter interest. Its oval acorns are a valuable source of food for small mammals and birds, but English Oak may take up to 20 years before the first crop of acorns is produced. Robust and sturdy, it is an excellent specimen tree for large areas.}, 
+  journal={Gardenia.net}, 
+  author={Gardenia} 
+  }
+
 @misc{fern, 
   type={Database}, 
   title={Matteuccia struthiopteris (Ostrich fern)}, 
@@ -77,8 +93,6 @@
   author={NCSU} 
   }
 
-
-
 @book{galax, 
   title={Galax (Galax Urceolata): An Annotated Bibliography}, 
   url={https://www.srs.fs.usda.gov/pubs/gtr/gtr_srs087.pdf}, 
@@ -95,7 +109,6 @@
   journal={North Carolina Extension Gardener Plant Toolbox} 
   }
 
-  
 @misc{hypopitys, 
   url={https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_hypopitys.shtml}, abstractNote={Pinesap is an herbaceous perennial wildflower with a wide geographic distribution throughout the United States and Canada. However, Pinesap is a rarely encountered wildflower.}, 
   journal={U.S. Forest Service},
@@ -109,7 +122,6 @@
   journal={North Carolina Extension Gardener Plant Toolbox}, 
   author={NCSU} 
   }
-
 
 @misc{iris2, 
   type={Database}, 
@@ -142,6 +154,18 @@
   year={2017}, 
   month={Jul} 
   }
+  
+@misc{snail, 
+  title={Patera clarki nantahala}, 
+  url={https://en.wikipedia.org/w/index.php?title=Patera_clarki_nantahala&oldid=1010217193}, abstractNote={Patera clarki nantahala, the noonday globe, is a subspecies of Patera clarki, a land snail in the family Polygyridae. It is endemic to North Carolina in the United States.
+The name nantahala is a Cherokee word which means noonday. This subspecies was given this name because the snail lives in a deep gorge where the sunshine does not reach the ground until the middle of the day.}, note={Page Version ID: 1010217193}, 
+journal={Wikipedia}, 
+author={Wikipedia}, 
+year={2021}, 
+month={Mar}, 
+language={en} 
+}
+
 
 @misc{pinec, 
   type={Database}, 
@@ -166,6 +190,23 @@
   month={Jan} 
   }
 
+@misc{redoak, 
+  type={Database}, 
+  title={Quercus rubra (Northern red oak)},
+  url={https://www.wildflower.org/plants/result.php?id_plant=quru}, 
+  journal={Native Plants of North America},
+  author={TWC}, 
+  year={2013}, 
+  month={Jun} 
+  }
+  
+@misc{red2, 
+  title={Northern Red Oak}, url={https://www.srs.fs.usda.gov/pubs/misc/ag_654/volume_2/quercus/rubra.htm}, 
+  abstractNote={Northern red oak (Quercus rubra), also known as common red oak, eastern red oak, mountain red oak, and gray oak, is widespread in the East and grows on a variety of soils and topography, often forming pure stands. Moderate to fast growing, this tree is one of the more important lumber species of red oak and is an easily transplanted, popular shade tree with good form and dense foliage.}, 
+  author={Sander, Ivan L.}, 
+  year={1997}, 
+  month={Oct} 
+  }
   
 @misc{rigida, 
   title={Pinus rigida}, 
@@ -190,9 +231,6 @@
   year={2021}, 
   month={May} 
   }
-
-
-
 
 @misc{uniflora, 
   url={https://www.fs.fed.us/wildflowers/beauty/mycotrophic/monotropa_uniflora.shtml}, 
